@@ -23,6 +23,7 @@ import static com.bytechef.task.dispatcher.condition.constant.ConditionTaskDispa
 import com.bytechef.atlas.configuration.domain.Task;
 import com.bytechef.atlas.configuration.domain.WorkflowTask;
 import com.bytechef.atlas.coordinator.event.TaskExecutionCompleteEvent;
+import com.bytechef.atlas.coordinator.task.dispatcher.ErrorHandlingTaskDispatcher;
 import com.bytechef.atlas.coordinator.task.dispatcher.TaskDispatcher;
 import com.bytechef.atlas.coordinator.task.dispatcher.TaskDispatcherResolver;
 import com.bytechef.atlas.execution.domain.Context;
@@ -33,9 +34,9 @@ import com.bytechef.atlas.file.storage.TaskFileStorage;
 import com.bytechef.commons.util.MapUtils;
 import com.bytechef.evaluator.Evaluator;
 import com.bytechef.task.dispatcher.condition.util.ConditionTaskUtils;
+import com.fasterxml.jackson.core.type.TypeReference;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -46,7 +47,7 @@ import org.springframework.context.ApplicationEventPublisher;
  * @author Ivica Cardic
  * @author Matija Petanjek
  */
-public class ConditionTaskDispatcher implements TaskDispatcher<TaskExecution>, TaskDispatcherResolver {
+public class ConditionTaskDispatcher extends ErrorHandlingTaskDispatcher implements TaskDispatcherResolver {
 
     private final ContextService contextService;
     private final Evaluator evaluator;
@@ -61,6 +62,8 @@ public class ConditionTaskDispatcher implements TaskDispatcher<TaskExecution>, T
         TaskDispatcher<? super Task> taskDispatcher, TaskExecutionService taskExecutionService,
         TaskFileStorage taskFileStorage) {
 
+        super(eventPublisher);
+
         this.contextService = contextService;
         this.evaluator = evaluator;
         this.eventPublisher = eventPublisher;
@@ -70,7 +73,7 @@ public class ConditionTaskDispatcher implements TaskDispatcher<TaskExecution>, T
     }
 
     @Override
-    public void dispatch(TaskExecution taskExecution) {
+    public void doDispatch(TaskExecution taskExecution) {
         taskExecution.setStartDate(Instant.now());
         taskExecution.setStatus(TaskExecution.Status.STARTED);
 
@@ -79,15 +82,13 @@ public class ConditionTaskDispatcher implements TaskDispatcher<TaskExecution>, T
         List<WorkflowTask> subWorkflowTasks;
 
         if (ConditionTaskUtils.resolveCase(taskExecution)) {
-            subWorkflowTasks = MapUtils.getList(
-                taskExecution.getParameters(), CASE_TRUE, WorkflowTask.class, Collections.emptyList());
+            subWorkflowTasks = getSubWorkflowTasks(taskExecution, CASE_TRUE);
         } else {
-            subWorkflowTasks = MapUtils.getList(
-                taskExecution.getParameters(), CASE_FALSE, WorkflowTask.class, Collections.emptyList());
+            subWorkflowTasks = getSubWorkflowTasks(taskExecution, CASE_FALSE);
         }
 
         if (!subWorkflowTasks.isEmpty()) {
-            WorkflowTask subWorkflowTask = subWorkflowTasks.get(0);
+            WorkflowTask subWorkflowTask = subWorkflowTasks.getFirst();
 
             TaskExecution subTaskExecution = TaskExecution.builder()
                 .jobId(taskExecution.getJobId())
@@ -98,7 +99,8 @@ public class ConditionTaskDispatcher implements TaskDispatcher<TaskExecution>, T
                 .build();
 
             Map<String, ?> context = taskFileStorage.readContextValue(
-                contextService.peek(Validate.notNull(taskExecution.getId(), "id"), Context.Classname.TASK_EXECUTION));
+                contextService.peek(Validate.notNull(taskExecution.getId(), "id"),
+                    Context.Classname.TASK_EXECUTION));
 
             subTaskExecution.evaluate(context, evaluator);
 
@@ -117,6 +119,16 @@ public class ConditionTaskDispatcher implements TaskDispatcher<TaskExecution>, T
 
             eventPublisher.publishEvent(new TaskExecutionCompleteEvent(taskExecution));
         }
+
+    }
+
+    private static List<WorkflowTask> getSubWorkflowTasks(TaskExecution conditionTaskExecution, String caseTrue) {
+        return MapUtils
+            .getList(
+                conditionTaskExecution.getParameters(), caseTrue, new TypeReference<Map<String, ?>>() {}, List.of())
+            .stream()
+            .map(WorkflowTask::new)
+            .toList();
     }
 
     @Override
