@@ -24,6 +24,7 @@ import static com.bytechef.task.dispatcher.parallel.constants.ParallelTaskDispat
 import com.bytechef.atlas.configuration.domain.Task;
 import com.bytechef.atlas.configuration.domain.WorkflowTask;
 import com.bytechef.atlas.coordinator.event.TaskExecutionCompleteEvent;
+import com.bytechef.atlas.coordinator.task.dispatcher.ErrorHandlingTaskDispatcher;
 import com.bytechef.atlas.coordinator.task.dispatcher.TaskDispatcher;
 import com.bytechef.atlas.coordinator.task.dispatcher.TaskDispatcherResolver;
 import com.bytechef.atlas.execution.domain.Context;
@@ -33,9 +34,9 @@ import com.bytechef.atlas.execution.service.CounterService;
 import com.bytechef.atlas.execution.service.TaskExecutionService;
 import com.bytechef.atlas.file.storage.TaskFileStorage;
 import com.bytechef.commons.util.MapUtils;
+import com.fasterxml.jackson.core.type.TypeReference;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -50,7 +51,7 @@ import org.springframework.context.ApplicationEventPublisher;
  * @author Arik Cohen
  * @since May 12, 2017
  */
-public class ParallelTaskDispatcher implements TaskDispatcher<TaskExecution>, TaskDispatcherResolver {
+public class ParallelTaskDispatcher extends ErrorHandlingTaskDispatcher implements TaskDispatcherResolver {
 
     private final ContextService contextService;
     private final CounterService counterService;
@@ -65,6 +66,8 @@ public class ParallelTaskDispatcher implements TaskDispatcher<TaskExecution>, Ta
         TaskDispatcher<? super Task> taskDispatcher, TaskExecutionService taskExecutionService,
         TaskFileStorage taskFileStorage) {
 
+        super(eventPublisher);
+
         this.contextService = contextService;
         this.counterService = counterService;
         this.eventPublisher = eventPublisher;
@@ -74,9 +77,14 @@ public class ParallelTaskDispatcher implements TaskDispatcher<TaskExecution>, Ta
     }
 
     @Override
-    public void dispatch(TaskExecution taskExecution) {
+    public void doDispatch(TaskExecution taskExecution) {
         List<WorkflowTask> workflowTasks = Validate.notNull(
-            MapUtils.getList(taskExecution.getParameters(), TASKS, WorkflowTask.class, Collections.emptyList()),
+            MapUtils
+                .getList(
+                    taskExecution.getParameters(), TASKS, new TypeReference<Map<String, ?>>() {}, List.of())
+                .stream()
+                .map(WorkflowTask::new)
+                .toList(),
             "'workflowTasks' property must not be null");
 
         if (workflowTasks.isEmpty()) {
@@ -86,6 +94,11 @@ public class ParallelTaskDispatcher implements TaskDispatcher<TaskExecution>, Ta
 
             eventPublisher.publishEvent(new TaskExecutionCompleteEvent(taskExecution));
         } else {
+            taskExecution.setStartDate(Instant.now());
+            taskExecution.setStatus(TaskExecution.Status.STARTED);
+
+            taskExecution = taskExecutionService.update(taskExecution);
+
             counterService.set(Validate.notNull(taskExecution.getId(), "id"), workflowTasks.size());
 
             for (WorkflowTask workflowTask : workflowTasks) {
